--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -4,7 +4,7 @@
     
     width:100%;
     align-items: center;
-    height:500px;
+    
   
 
 }
@@ -24,6 +24,7 @@ img
  
     
 }
+
 .container{
   
    
@@ -34,9 +35,10 @@ img
     font-weight: 500;
     font-family: sans-serif;
     letter-spacing: 2px;
-    top:200px;
-    left:300px;
+    top:300px;
+    left:350px;
     padding: 5px;
+    
     
    
   
@@ -48,13 +50,48 @@ img
 #project-section
 {
     width:100%;
-    height:800px;
    
+ 
     color:white;
+    
+    text-align: center;
+    padding-top:130px;
+    
+   
+   
 }
+
+.wrap{
+
+    display: flex;
+   justify-content: center;
+
+}
+
 
 #footer-section
 {
     width:100%;
     height:800px;
+}
+.node{
+    width:400px;
+    
+    border: 1px solid white;
+    margin:5px;
+
+}
+.mongo{
+    width:400px;
+   
+    border: 1px solid white;
+    margin:5px;
+
+}
+.react{
+    width:400px;
+   
+    border: 1px solid white;
+    margin:5px;
+
 }
