--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -71,8 +71,11 @@ img
 
 #footer-section
 {
+    padding-top:130px;
     width:100%;
-    height:800px;
+    color:white;
+    text-align: center;
+    
 }
 .node{
     width:400px;
@@ -94,4 +97,8 @@ img
     border: 1px solid white;
     margin:5px;
 
+}
+.icons
+{
+    padding:5px;
 }
